added most recent entries

--- a/includes/entry.jade
+++ b/includes/entry.jade
@@ -1,12 +1,12 @@
-include header.jade
+include ../header.jade
 
 body
   div.main-content-container
     div#panel-left
       div.title
         a(href="http://www.wolflux.com") Tyler
-        br
-        | Wolf
+          br
+          | Wolf
       div.description
         div.entry-title
         div.date
@@ -15,8 +15,6 @@ body
         a(href="http://about.me/tylerwolf", target="_blank") contact
     div#gallery-right
       div.gallery-inner
-
-script(type="text/javascript", src="/js/index.js")
 
 script(type="text/javascript")
   var _gaq = _gaq || [];
