--- a/includes/entry.html
+++ b/includes/entry.html
@@ -11,7 +11,7 @@
 <body>
   <div class="main-content-container">
     <div id="panel-left">
-      <div class="title"><a href="http://www.wolflux.com">Tyler</a><br>Wolf</div>
+      <div class="title"><a href="http://www.wolflux.com">Tyler<br>Wolf</a></div>
       <div class="description">
         <div class="entry-title"></div>
         <div class="date"></div>
@@ -24,7 +24,6 @@
     </div>
   </div>
 </body>
-<script type="text/javascript" src="/js/index.js"></script>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-37325539-1']);
