--- a/includes/entry_8_9_13.html
+++ b/includes/entry_8_9_13.html
@@ -11,7 +11,7 @@
 <body>
   <div class="main-content-container">
     <div id="panel-left">
-      <div class="title"><a href="http://www.wolflux.com">Tyler</a><br>Wolf</div>
+      <div class="title"><a href="http://www.wolflux.com">Tyler<br>Wolf</a></div>
       <div class="description">
         <div class="entry-title"></div>
         <div class="date"></div>
@@ -24,7 +24,6 @@
     </div>
   </div>
 </body>
-<script type="text/javascript" src="/js/index.js"></script>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-37325539-1']);
@@ -34,4 +33,11 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+</script>
+<link rel="stylesheet" type="text/css" href="/css/grid.css?v=1">
+<link rel="stylesheet" type="text/css" href="/css/party_calendar.css?v=1">
+<script type="text/javascript" src="/js/party_calendar.js"></script>
+<script type="text/javascript">
+  d3.select('#panel-left .entry-title').property('innerHTML','Color Calendar');
+  d3.select('#panel-left .date').property('innerHTML',new Date().toLocaleDateString());
 </script>
