updated name linke

--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@ body
   div.main-content-container
     div#panel-left
       div.title
-        a(href="http://www.wolflux.com") Tyler
+        a(href="http://www.tylernwolf.com") Tyler
         br
         | Wolf
       div.description
