--- a/index.jade
+++ b/index.jade
@@ -13,6 +13,8 @@ body
         div.explanation
       footer
         a(href="http://about.me/tylerwolf", target="_blank") contact
+        &nbsp; / &nbsp;
+        a(href="http://blog.tylernwolf.com", target="_blank") blog
     div#gallery-right
       div.gallery-inner
 
