--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ footer {
 a {
   text-decoration:none;
   color:#fff;
+  transition:color;
+  opacity:0.9;
 }
 
 footer a {
@@ -42,7 +44,7 @@ a:hover {
 
 #panel-left {
   position:relative;
-  width:25%;
+  width:40%;
   height:100%;
   float:left;
   /*background-color:#262626;*/
@@ -66,7 +68,7 @@ a:hover {
 }
 
 #gallery-right {
-  width:75%;
+  width:60%;
   height:100%;
   float:left;
   overflow:hidden;
@@ -77,28 +79,44 @@ a:hover {
   position:relative;
   width:100%;
   height:100%;
-  /*min-height:100%;*/
+  padding-top:8px;
   top:0;
+}
+
+.gallery-inner .links {
+  position:relative;
+  width:100%;
+  height:100%;
 }
 
 #gallery-right .gallery-inner .entry {
   position:relative;
-  width:100%;
   background-color:#262626;
-  height:15%;
+  height:12%;
   overflow:hidden;
-  /*text-align:right;*/
   font-size:2em;
-  opacity:0.9;
   display:block;
-  transition:color;
 }
 
-#gallery-right .gallery-inner .entry:hover {
+#gallery-right .gallery-inner .title {
+  opacity:0.5;
+}
+
+.contact-info {
+  position:absolute;
+  top:8px;
+  right:0;
+  font-size:2em;
+}
+
+a:hover {
   opacity:1;
   -webkit-animation-duration:0.25s;
   -webkit-animation-name:colorful;
   -webkit-animation-iteration-count:infinite;
+  animation-duration:0.25s;
+  animation-name:colorful;
+  animation-iteration-count:infinite;
 }
 
 @-webkit-keyframes colorful {
@@ -127,7 +145,28 @@ a:hover {
   }
 }
 
-.entry .entry-date {
-  margin-top:-10px;
-  margin-right:-3px;
+@keyframes colorful {
+  from {
+    color:#C22E2B;
+  }
+
+  20% {
+    color:#C23D23;
+  }
+
+  40% {
+    color:#D9AB27;
+  }
+
+  60% {
+    color:#68B841;
+  }
+
+  80% {
+    color:#2587CF;
+  }
+
+  to {
+    color:#9E3CD9;
+  }
 }
