--- a/index.jade
+++ b/index.jade
@@ -16,7 +16,7 @@ body
         .links
         .contact-info
             a(href="http://about.me/tylerwolf", target="_blank") contact
-            &nbsp;&nbsp;
+            &nbsp;/&nbsp;
             a(href="http://blog.tylernwolf.com", target="_blank") creative blog
 
 script(type="text/javascript", src="/js/index.js")
