updated main page description

--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,7 @@ body
         div.entry-title
         div.date
         div.explanation
+          | Hi, I'm Tyler Wolf and I'm a professional User Experience Designer. This website documents some of my personal work and experiments in design and programming. Feel free to e-mail me if you'd like to talk!
     div#gallery-right
       div.gallery-inner
         .entry.title
