--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -15,9 +15,11 @@ body
       .portfolio-title Tyler Wolf Portfolio
       div.gallery-container
         .selection-image.not-filled
-          img
+          img#gallery-image.hidden
         .selection-title
         .selection-description
+        .loading-container.hidden
+          .loading-text Loading...
 
 script(type="text/javascript", src="portfolio.js")
 
