--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,12 +20,13 @@
 }
 
 .portfolio-container .portfolio-item {
-    display:block;
+    display:inline-block;
     color:#1a1a1a;
     margin:1em;
     border: 2px solid #aaa;
     border-radius:5px;
     cursor:pointer;
+    height: 250px;
 }
 
 .portfolio-container .portfolio-filters {
@@ -85,7 +86,7 @@
     margin-left:0.5em;
 }
 
-@media (min-width: 1024px) { 
-    .portfolio-container .work-picture { height: 150px; } 
-    .portfolio-container .work-picture img { max-height: 126px; } 
+@media (min-width: 1024px) {
+    .portfolio-container .work-picture { height: 150px; }
+    .portfolio-container .work-picture img { max-height: 126px; }
 }
